cabal-version: 3.14
name:          gltf2mdo
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

executable gltf2mdo
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: BlockArguments
                      , NoImplicitPrelude
                      , OverloadedRecordDot
                      , UnicodeSyntax
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , som-gltf
                      , binary
    main-is:            Main.hs
    hs-source-dirs:     app
