cabal-version: 3.14
name:          gltf2mhm
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

executable gltf2mhm
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: BlockArguments
                      , OverloadedRecordDot
                      , UnicodeSyntax
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , som-gltf
                      , binary
                      , extra
                      , gltf-codec
                      , optparse-applicative
                      , unliftio
    main-is:            Main.hs
    hs-source-dirs:     app
