cabal-version: 3.14
name:          gltf2msm
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

common shared
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: BlockArguments
                      , DuplicateRecordFields
                      , NoFieldSelectors
                      , NoImplicitPrelude
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , UnicodeSyntax
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , binary
                      , bytestring
                      , extra
                      , gltf-codec
                      , linear
                      , mtl
                      , optparse-applicative
                      , text
                      , unliftio
                      , unordered-containers
                      , vector

library
    import:          shared
    exposed-modules: SOM.GlTF
                   , Control.Monad.Except.Extra
                   , UnliftIO.Exception.Extra
    hs-source-dirs:  src

executable gltf2msm
    import:         shared
    main-is:        Main.hs
    build-depends:  gltf2msm
    hs-source-dirs: app
