cabal-version: 3.14
name:          gltf2msm
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

executable gltf2msm
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: BlockArguments
                      , DuplicateRecordFields
                      , NoFieldSelectors
                      , NoImplicitPrelude
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , UnicodeSyntax
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , som-gltf
                      , binary
                      , extra
                      , gltf-codec
                      , linear
                      , mtl
                      , optparse-applicative
                      , unliftio
    main-is:          Main.hs
    hs-source-dirs:   app
