cabal-version: 3.14
name:          som-base
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

library
    ghc-options:        -Wall
    exposed-modules:    SOM.Prelude
                      , SOM.Binary.Piece
                      , SOM.Binary.Texture
                      , SOM.CLI
                      , Data.Binary.Extra
    build-depends:      base ^>=4.20.0.0
                      , base-unicode-symbols
                      , binary
                      , bytestring
                      , derive-storable
                      , filepath
                      , linear
                      , optparse-applicative
                      , unliftio
    hs-source-dirs:     src
    default-language:   GHC2024
    default-extensions: NoImplicitPrelude
                      , OverloadedRecordDot
                      , UnicodeSyntax
