cabal-version: 3.14
name:          som-gltf
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

library
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: BlockArguments
                      , DuplicateRecordFields
                      , NoFieldSelectors
                      , NoImplicitPrelude
                      , OverloadedRecordDot
                      , OverloadedStrings
                      , PatternSynonyms
                      , UnicodeSyntax
    exposed-modules:    SOM.GlTF
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , binary
                      , bytestring
                      , extra
                      , gltf-codec
                      , linear
                      , text
                      , unliftio
                      , unordered-containers
                      , vector
    hs-source-dirs:     src
