cabal-version: 3.14
name:          som
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

common shared
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: Arrows
                      , BlockArguments
                      , DuplicateRecordFields
                      , LexicalNegation
                      , NoFieldSelectors
                      , NoImplicitPrelude
                      , OverloadedRecordDot
                      , PatternSynonyms
                      , RequiredTypeArguments
                      , StrictData
                      , TypeFamilies
                      , UnicodeSyntax
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , base-unicode-symbols
                      , binary
                      , containers
                      , extra
                      , gl
                      , GLFW-b
                      , lens
                      , linear
                      , mtl
                      , time
                      , typelits-printf
                      , unliftio
                      , vector
                      , Yampa ==0.15

library
    import:          shared
    exposed-modules: SOM.Collision
                   , SOM.Controller
                   , SOM.Game
                   , SOM.Map
                   , SOM.Player
                   , SOM.Player.Movement
                   , SOM.Renderer
                   , SOM.Renderer.Draw
                   , SOM.Renderer.Model
                   , SOM.Renderer.Program
                   , SOM.Renderer.Texture
                   , SOM.Renderer.Uniform
                   , SOM.Transform
                   , SOM.Viewport
                   , SOM.Window
                   , Data.Binary.Lifted
                   , Data.Time.Clock.Lifted
                   , Data.Vector.Storable.Lifted
                   , Foreign.Extra
                   , Foreign.Lifted
                   , Graphics.UI.GLFW.Lifted
                   , Linear.Metric.Unicode
                   , Linear.V3.Unicode
                   , Linear.Vector.Extra
                   , System.IO.Lifted
    hs-source-dirs:  src

executable som
    import:         shared
    main-is:        Main.hs
    build-depends:  som
    hs-source-dirs: app
