cabal-version: 3.14
name:          som
version:       0.1.0.0
author:        イクシオン・ロズベルグ
category:      Game
build-type:    Simple

common shared
    ghc-options:        -Wall
    default-language:   GHC2024
    default-extensions: Arrows
                      , BlockArguments
                      , DuplicateRecordFields
                      , LexicalNegation
                      , NoFieldSelectors
                      , NoImplicitPrelude
                      , OverloadedRecordDot
                      , PatternSynonyms
                      , RecordWildCards
                      , RequiredTypeArguments
                      , StrictData
                      , TypeFamilies
                      , UnicodeSyntax
    build-depends:      base ^>=4.20.0.0
                      , som-base
                      , base-unicode-symbols
                      , binary
                      , containers
                      , extra
                      , gl
                      , GLFW-b
                      , lens
                      , linear
                      , mtl
                      , time
                      , typelits-printf
                      , unliftio
                      , vector
                      , Yampa ==0.15

library
    import:          shared
    exposed-modules: SOM.Controller
                   , SOM.Draw
                   , SOM.Game
                   , SOM.Game.Animation
                   , SOM.Game.Collision
                   , SOM.Game.Item
                   , SOM.Game.Map
                   , SOM.Game.Model
                   , SOM.Game.Object
                   , SOM.Game.Objects
                   , SOM.Game.Player
                   , SOM.Game.Player.Head
                   , SOM.Game.Player.Movement
                   , SOM.Game.Player.Power
                   , SOM.Game.World
                   , SOM.Gauge
                   , SOM.IdentityList
                   , SOM.Renderer
                   , SOM.Renderer.Program
                   , SOM.Renderer.Texture
                   , SOM.Renderer.Uniform
                   , SOM.Renderer.VAO
                   , SOM.Transform
                   , SOM.Viewport
                   , SOM.Window
                   , Data.Binary.Lifted
                   , Data.Time.Clock.Lifted
                   , Data.Vector.Storable.Lifted
                   , Foreign.Extra
                   , Foreign.Lifted
                   , FRP.Yampa.Extra
                   , Graphics.UI.GLFW.Lifted
                   , Linear.Metric.Unicode
                   , Linear.V3.Unicode
                   , Linear.Vector.Extra
                   , System.IO.Lifted
    hs-source-dirs:  src

executable som
    import:         shared
    main-is:        Main.hs
    build-depends:  som
    hs-source-dirs: app
